@@ -178,6 +178,11 @@
 			<li><span class="label label-info">Modified</span> The preference for marking moved items as pinned is now disabled by default. You can re-enable it via Window &gt; Preferences &gt; Sirius &gt; Sirius Diagram</li>
 		</ul>
 		<h3 id="SpecifierVisibleChanges">Specifier-Visible Changes</h3>
+		<ul>
+			<li><span class="label label-info">Modified</span> Upgraded ELK version from 0.7.1 to 0.9.0, see the 
+				<a href="https://eclipse.dev/elk/downloads/releasenotes/release-0.9.0.html">ELK documentation</a> for the list of changes in that version (and previous). Due to improvements or refactoring in ELK, some configuration option identifiers have been renamed or deleted. An automatic migration has been added in Sirius to migrate these identifiers used in VSM (see Migrations section for detail). In any case, if your modeler uses an ELK layout, you must be careful.
+			</li>
+		</ul>
 		<h3 id="DeveloperVisibleChanges">Developer-Visible Changes</h3>
 		<ul>
 			<li><span class="label label-info">Modified</span> ArrangeBorderNodesAction.initAction now has two parameters for its text: when there is no selection, when there is a selection.</li>
@@ -195,6 +200,13 @@
 				<code>org.eclipse.gmf.runtime.diagram.ui.services.layout.LayoutType.DEFAULT</code>, 
 				<code>org.eclipse.sirius.diagram.ui.business.api.view.SiriusLayoutDataManager.LAYOUT_TYPE_ARRANGE_AT_OPENING</code> and 
 				<code>org.eclipse.sirius.diagram.ui.business.api.view.SiriusLayoutDataManager.KEEP_FIXED</code>.
+			</li>
+		</ul>
+		<h4 id="Migrations">Migrations</h4>
+		<ul>
+			<li><span class="label label-success">Added</span> A migration participant has been added to migrate ELK options used in VSM. Some have been renamed and some others have been removed. You should carefully read the information logged during this migration and the 
+				<a href="https://eclipse.dev/elk/downloads/releasenotes/release-0.9.0.html">ELK release notes</a> to check if any manual adjustments need to be made. The corresponding version, stored in attribute version of description:Group of the odesign file, is 
+				<em>15.4.0.202401051836</em>.
 			</li>
 		</ul>
 		<h2 id="sirius7.3.0">Changes in Sirius 7.3.0</h2>
@@ -439,7 +451,7 @@
 				<code>org.eclipse.sirius.properties.core.api.SiriusInputDescriptor.getOriginalSelections()</code>.
 			</li>
 		</ul>
-		<h4 id="Migrations">Migrations</h4>
+		<h4 id="Migrations2">Migrations</h4>
 		<ul>
 			<li><span class="label label-info">Modified</span>The migration participant introduced by 
 				<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=576423">Bug 576423 - 
@@ -842,7 +854,7 @@
 				<code>org.eclipse.sirius.tests.support.api.EclipseTestsSupportHelper.copyDirectory(String, String)</code> have been added to ease to the copy of the test files from the test plugin to the junit workspace.
 			</li>
 		</ul>
-		<h4 id="Migrations2">Migrations</h4>
+		<h4 id="Migrations3">Migrations</h4>
 		<ul>
 			<li><span class="label label-success">Added</span> A migration participant has been added to repair size of GMF nodes with Workspace Image style description. A default size was set for this type of nodes, which resulted in graphical inconsistencies (see 
 				<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=576423)">Bug 576423 - 
@@ -908,7 +920,7 @@
 				<code>org.eclipse.sirius.diagram.ui.edit.api.part.AbstractDDiagramEditPart.refreshChildren()</code> has been overridden to redraw the edges figures according to the order of the GMF edges.
 			</li>
 		</ul>
-		<h4 id="Migrations3">Migrations</h4>
+		<h4 id="Migrations4">Migrations</h4>
 		<ul>
 			<li><span class="label label-success">Added</span> A migration participant has been added to set a changeId value for each DRepresentationDescriptor that did not have one. Some old models were missing the changeId attribute, which could lead to technical problems. The migration participant 
 				<code>org.eclipse.sirius.diagram.ui.business.internal.migration.SetChangeIdMigrationParticipant</code> sets a random changeId if it didn&#8217;t already exist. The corresponding version, stored in attribute version of viewpoint:DAnalysis of the aird file, is 
@@ -920,7 +932,7 @@
 		</ul>
 		<h2 id="sirius6.5.1">Changes in Sirius 6.5.1</h2>
 		<h3 id="DeveloperVisibleChanges11">Developer-Visible Changes</h3>
-		<h4 id="Migrations4">Migrations</h4>
+		<h4 id="Migrations5">Migrations</h4>
 		<ul>
 			<li><span class="label label-info">Modified</span> The migration participant 
 				<code>org.eclipse.sirius.diagram.ui.business.internal.migration.NoteShapeDefaultLabelAlignmentMigrationParticipant</code> has been updated to repair Notes with a potential wrong vertical label alignment. This problem can occur since Sirius 6.3.2 used in a collaborative environment, Obeo Designer Team Edition or Team For Capella for example. The corresponding version, stored in the attribute version of viewpoint:DAnalysis of the aird file, is 
@@ -1060,7 +1072,7 @@
 				<code>org.eclipse.sirius.ext.gmf.runtime.editparts.GraphicalHelper.getAbsoluteBoundsWithoutLabelsIn100Percent(GraphicalEditPart)</code> has been added to get the rectangle bounds without taking labels into account. This is used, in particular, to compute the bendpoints of an edge when the source or the target of the edge is an edge.
 			</li>
 		</ul>
-		<h4 id="Migrations5">Migrations</h4>
+		<h4 id="Migrations6">Migrations</h4>
 		<ul>
 			<li><span class="label label-success">Added</span> A migration participant has been added to repair rectilinear edges containing only one bendpoint. Bracket edges are not relevant. The corresponding version, stored in attribute version of viewpoint:DAnalysis of the aird file, is 
 				<em>14.5.0.202104070943</em>.
